// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled PrimaryButton Should Render 1`] = `
<button
  className="primary__Button-sc-1lwi4g7-0 iUXqht"
  disabled={true}
  onClick={null}
  type="submit"
>
  <span />
</button>
`;

exports[`Disabled PrimaryButton Should Render 2`] = `
<button
  className="secondary__Button-j7mjyk-0 hSUMXm"
  disabled={true}
  onClick={null}
  type="button"
>
  <span />
</button>
`;

exports[`Disabled WarnButton Should Render 1`] = `
<button
  className="warn__Button-sc-5cg2rp-0 gxotsG"
  disabled={true}
  onClick={null}
  type="submit"
>
  <span />
</button>
`;

exports[`Full size PrimaryButton Should Render 1`] = `
<button
  className="primary__Button-sc-1lwi4g7-0 bHiHKa"
  disabled={false}
  onClick={null}
  type="submit"
>
  <span />
</button>
`;

exports[`LoadingButton with loading state Should Render 1`] = `
<button
  className="primary__Button-sc-1lwi4g7-0 loading__ExtendedButton-h7d8sr-0 jkYHBQ"
  disabled={true}
  label="Accept"
  onClick={null}
  type="submit"
>
  <svg
    height={24}
    preserveAspectRatio="xMidYMid"
    viewBox="0 0 100 100"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      transform="rotate(0 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.9375s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(22.5 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.875s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(45 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.8125s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(67.5 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.75s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(90 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.6875s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(112.5 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.625s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(135 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.5625s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(157.5 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.5s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(180 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.4375s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(202.5 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.375s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(225 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.3125s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(247.5 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.25s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(270 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.1875s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(292.5 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.125s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(315 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="-0.0625s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
    <g
      transform="rotate(337.5 50 50)"
    >
      <rect
        fill="#ffffff"
        height="14"
        rx="2"
        ry="2"
        width="6"
        x="47"
        y="18"
      >
        <animate
          attributeName="opacity"
          begin="0s"
          dur="1s"
          repeatCount="indefinite"
          values="1;0"
        />
      </rect>
    </g>
  </svg>
</button>
`;

exports[`LoadingButton with not loading state Should Render 1`] = `
<button
  className="primary__Button-sc-1lwi4g7-0 loading__ExtendedButton-h7d8sr-0 ibcFWR"
  disabled={false}
  label="Accept"
  onClick={null}
  type="submit"
>
  <span>
    Accept
  </span>
</button>
`;

exports[`PrimaryButton Should Render 1`] = `
<button
  className="primary__Button-sc-1lwi4g7-0 iUXqht"
  disabled={false}
  onClick={null}
  type="submit"
>
  <span />
</button>
`;

exports[`SecondaryButton Should Render 1`] = `
<button
  className="secondary__Button-j7mjyk-0 kgyVVR"
  disabled={false}
  onClick={null}
  type="button"
>
  <span />
</button>
`;

exports[`WarnButton Should Render 1`] = `
<button
  className="warn__Button-sc-5cg2rp-0 gxotsG"
  disabled={false}
  onClick={null}
  type="submit"
>
  <span />
</button>
`;
